[package]
name = "bindings"
version = "0.1.0"
authors = ["Arik Sosman <git@arik.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
lazy_static = "1.4.0"
lightning = {path = "../lightning"}
secp256k1 = "0.15"
