[package]
name = "bindings"
version = "0.1.0"
authors = ["Arik Sosman <git@arik.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
lightning = {path = "../lightning"}
bitcoin = "0.21"
secp256k1 = "0.15"
wasm-bindgen = "0.2"
